check_errors_v8.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
   Compiling racing-wheel-ui v0.1.0 (H:\Code\Rust\OpenRacing\crates\ui)
error[E0432]: unresolved import `windows::Win32::UI::Pnp`
  --> crates\engine\src\hid\windows.rs:32:25
   |
32 | use windows::Win32::UI::Pnp::{
   |                         ^^^ could not find `Pnp` in `UI`

error[E0432]: unresolved import `racing_wheel_schemas::units`
  --> crates\engine\src\hid\windows.rs:45:27
   |
45 | use racing_wheel_schemas::units::TorqueNm;
   |                           ^^^^^ could not find `units` in `racing_wheel_schemas`

warning: unused import: `AvRevertMmThreadCharacteristics`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 2 previous errors; 1 warning emitted
